fix: change crosslink spacing

--- a/src/templates/module_20_quote/styles.less
+++ b/src/templates/module_20_quote/styles.less
@@ -29,7 +29,7 @@
 	}
 
 	.icon {
-		margin-right: 23px; 
+		margin-right: 16px; 
 		width: 13px;
 	}
 
